# NextStep

./: .env.sample  .gitignore  .prettierrc.json  README.md  compose.dev.yml  package.json  pnpm-lock.yaml  pyproject.toml
.zed/: settings.json
docker/: .dockerignore  Dockerfile  run.dev.sh
docs/: images.md
src/emails/: email_reader.py  parser.py  tasks.py  urls.py  views.py
src/nextstep/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/nextstep/migrations/: 0001_initial.py  0002_application_company_link_application_role_link.py  0003_alter_application_job_description.py  0004_tag_applicationtag_application_tags.py  0005_tag_colour.py  0006_auto_20260325_2319.py  0007_alter_applicationtag_unique_together_and_more.py  0008_tag_user_emailintegration.py  0009_useremailaccount.py  0010_application_user_alter_useremailaccount_user.py  0011_alter_application_user.py
src/nextstep/templatetags/: markdown_tag.py
src/settings/: __init__.py  celery.py  settings.py  urls.py
src/static/css/: main.css
src/templates/: application.html  application_update.html  base.html  dashboard.html  settings.html
src/templates/auth/: signin.html  signup.html
src/templates/partials/: application_card.html  application_timeline.html  nav.html
src/templates/partials/modals/: application_add.html
src/tests/: test_models.py
