[project]
name = "NextStep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleach>=6.3.0",
    "django>=5.2.12",
    "markdown>=3.10.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
]

[tool.django-stubs]
django_settings_module = "nextstep.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
