[project]
name = "NextStep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleach>=6.3.0",
    "celery[redis]>=5.6.3",
    "django>=5.2.12",
    "django-encrypted-model-fields>=0.6.5",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "markdown>=3.10.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.1",
]

[tool.django-stubs]
django_settings_module = "nextstep.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
